# api_service

./: .env_example  Dockerfile  main.tf  pyproject.toml  variable.tf
.github/workflows/: cicd.yml
airflow/: Dockerfile  config.py  dag.py  utils.py
api_service/: main.py
